--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.1.0",
+    "@angular/cdk": "^16.0.0",
     "@angular/common": "^16.1.0",
     "@angular/compiler": "^16.1.0",
     "@angular/core": "^16.1.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.1.0",
+    "@angular/material": "^16.1.6",
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@fortawesome/fontawesome-free": "^6.0.0",
+    "@ngrx/store": "^16.1.0",
+    "chart.js": "^3.1.1",
+    "mdb-angular-ui-kit": "^5.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
