--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/effects": "^16.1.0",
     "@ngrx/store": "^16.1.0",
     "chart.js": "^3.1.1",
+    "firebase-admin": "^11.10.1",
     "mdb-angular-ui-kit": "^5.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
